--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "root": [
     {
       "name": "list",
@@ -755,21 +755,21 @@
               "name": "menu_tip_cover_buffer",
               "symbol": "SpaceTab",
               "tip": [
-                "当前值: {{ $PSCompletions.config.menu_tip_cover_buffer }} (默认值为 0, 表示禁用)\n",
+                "当前值: {{ $PSCompletions.config.menu_tip_cover_buffer }} (默认值为 1, 表示启用)\n",
                 "设置当显示补全提示信息时, 是否覆盖它所在区域及其附近区域每一行的原有内容(退出补全菜单时恢复)"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
-                    "设置为 0 (默认值)\n",
+                    "设置为 0 \n",
                     "不覆盖它所在区域及其上方区域每一行的原有内容, 只覆盖显示所需要的那几行区域"
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
-                    "设置为 1\n",
+                    "设置为 1 (默认值)\n",
                     "覆盖它所在区域及其上方区域每一行的原有内容"
                   ]
                 }
@@ -1175,80 +1175,28 @@
         "如果移除它，将会自动重新添加"
       ]
     },
-    "description": [
-      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理\n",
-      "当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
-      "模块版本日志: <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/log.json<@Cyan>\n",
+    "desc": [
+      "<@Cyan>当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
+      "模块版本日志:\n",
+      "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG-CN.md<@Cyan>\n",
+      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG-CN.md<@Cyan>\n",
       "\n",
-      "关于补全项后面的特殊符号:\n",
-      "- 😄🤔😎 : 如果出现多个, 表示符合多个条件, 可以选择其中一个的效果\n",
+      "本模块命令简单, 你只需要输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
+      "现在，输入 <@Magenta>psc add<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键，去添加第一个补全吧!\n",
       "\n",
-      "   - 😄 : 表示选用当前选中的补全后, 可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全(普通补全或选项类补全)\n",
-      "        - 可通过 <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 🤔 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全(如 --verbose)\n",
-      "        - 可通过 <@Magenta>psc menu symbol OptionTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan>, 再输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
-      "        - 如果字符串有空格, 请使用 \"\" 或 '' 包裹, 如 \"test content\"\n",
-      "        - 如果同时还有 😄, 表示有几个预设的字符串可以补全, 你可以不输入字符串, 直接按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全\n",
-      "        - 可通过 <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 如果存在通用选项类补全, 也可以触发通用选项的补全\n",
-      "   - 所有补全都可以在输入部分后按下 <@Magenta>Tab<@Cyan> 键触发补全\n",
-      "   - 如果你不需要也不想看到这些符号, 可以将它们替换成空字符串。e.g. <@Magenta>psc menu symbol SpaceTab \"\"<@Cyan>\n",
-      "\n",
-      "- 使用 PowerShell 语言自带的补全菜单时, 如果 <@Magenta>...<@Cyan> 是最后一个补全, 则表示可显示区域过小, 无法显示所有候选项\n",
-      "- 使用模块提供的补全菜单时, 如果补全提示信息末尾出现 <@Magenta>...<@Cyan>, 则表示当前显示区域宽度不够, 提示信息显示不完整\n",
-      "\n",
-      "关于补全提示信息:\n",
-      " - 补全提示信息只是辅助, 你也可以使用 <@Magenta>psc menu config menu_show_tip 0<@Cyan> 来禁用补全提示信息的显示\n",
-      " - 补全提示信息一般由三部分组成: <@Magenta>用法<@Cyan> + <@Magenta>描述<@Cyan> + <@Magenta>举例<@Cyan>\n",
-      "-----------------示例--------------------\n\n",
-      "U: install|add [-g|-u] [options] <app> \n",
-      "这里是命令的描述说明\n",
-      "在 U: 和 E: 之间的内容都是命令描述\n",
-      "E: install xxx\n",
-      "   add -g xxx\n\n",
-      "----------------------------------------\n",
-      "- 示例解析:\n",
-      "  1. 用法: 以 <@Magenta>U: <@Cyan>开头(Usage)\n",
-      "     - 命令名称: <@Magenta>install<@Cyan>\n",
-      "     - 命令别名: <@Magenta>add<@Cyan>\n",
-      "     - 必填参数: <@Magenta><app><@Cyan>\n",
-      "       - <> 里的值是对必填参数的简要概括\n",
-      "     - 可选参数: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
-      "       - [options] 表示泛指一些选项\n",
-      "  2. 描述: 在 U: 和 E: 中间的内容就是命令描述\n",
-      "  3. 举例: 以 <@Magenta>E: <@Cyan> 开头(Example), 及其之后的内容\n",
-      "     - 示例的起始命令通常是当前补全命令附近, 不会从头开始列出\n",
-      "\n",
-      "关于模块提供的补全菜单:\n",
-      "- 模块提供的补全菜单只能在 Windows 系统下使用 PowerShell(pwsh) 运行, 其他环境只能使用 PowerShell 自带的补全菜单\n",
-      "- 模块提供的补全菜单中的按键\n",
-      "   1. 应用选中的补全项: <@Magenta>Enter<@Cyan>(回车键)\n",
-      "   2. 删除过滤字符: <@Magenta>Backspace<@Cyan>(退格键)\n",
-      "   3. 退出补全菜单: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
-      "      - 当过滤区域没有字符时，也可以按下 <@Magenta>Backspace<@Cyan>(退格键) 退出补全菜单\n",
-      "   4. 选择补全项: \n",
-      "     ┌───────────────┬───────────────┐\n",
-      "     │   选择上一项  │   选择下一项  │\n",
-      "     │       <@Magenta>Up<@Cyan>      │     <@Magenta>Down<@Cyan>      │\n",
-      "     |      <@Magenta>Left<@Cyan>     │     <@Magenta>Right<@Cyan>     │\n",
-      "     │  <@Magenta>Shift + Tab<@Cyan>  │      <@Magenta>Tab<@Cyan>      │\n",
-      "     │ <@Magenta>Shift + Space<@Cyan> │     <@Magenta>Space<@Cyan>     │\n",
-      "     │   <@Magenta>Ctrl + u<@Cyan>    │   <@Magenta>Ctrl + d<@Cyan>    │\n",
-      "     │   <@Magenta>Ctrl + p<@Cyan>    │   <@Magenta>Ctrl + n<@Cyan>    │\n",
-      "     └───────────────┴───────────────┘\n",
-      "- 补全菜单的所有配置, 你可以使用 <@Magenta>psc menu<@Cyan> 触发补全, 通过命令提示信息来了解\n",
-      "\n",
-      "关于模块的其他信息:\n",
       "PSCompletions 模块只会占用两个全局命名(<@Yellow>你不能修改它们<@Cyan>)\n",
-      "  <@Magenta>$PSCompletions<@Cyan> => 变量名, 用于存储模块相关的所有信息\n",
-      "  <@Magenta>PSCompletions<@Cyan>  => 函数名, 模块导出的核心函数(<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
+      "  <@Magenta>PSCompletions<@Cyan> => 函数名, 模块导出的核心函数(<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
+      " <@Magenta>$PSCompletions<@Cyan> => 变量名, 存储模块相关的所有信息\n",
       "\n",
-      "如需了解更多信息, 请访问项目:\n",
-      "  Github: <@Blue>https://github.com/abgox/PSCompletions\n<@Cyan>",
-      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions\n<@Cyan>",
-      "如果有使用问题, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )\n",
-      "如果 PSCompletions 对你有所帮助, 请给这个项目点个 <@Yellow>Star<@>"
+      "更多相关信息, 请访问项目:\n",
+      "  Github: <@Blue>https://github.com/abgox/PSCompletions<@Cyan>\n",
+      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions<@Cyan>\n",
+      "如果有使用问题, 请提交 issue: https://github.com/abgox/PSCompletions/issues\n",
+      "如果 <@Blue>PSCompletions<@Cyan> 对你有所帮助, 请给这个项目点个 <@Yellow>Star<@>\n"
+    ],
+    "description": [
+      "<@Blue>PSCompletions(<@Magenta>psc<@Cyan>) --- PowerShell 补全管理模块\n",
+      "{{ $info.desc }}"
     ],
     "init_info": [
       "\n<@Yellow>PSCompletions 模块安装警告(仅首次初始化显示):\n",
@@ -1257,87 +1205,12 @@
       "  2. 安装时意外使用了 <@Magenta>-Scope AllUser<@Yellow>\n",
       "如果属于以上情况, 你应该重新安装模块, 使用 <@Magenta>-Scope CurrentUser<@Yellow>, 除非你符合以下前提:\n",
       "  1. 你已知晓以管理员模式安装的 PSCompletions 模块在用户权限下使用会出现权限问题\n",
-      "  2. 你始终使用管理员模式打开 PowerShell, 不会使用用户权限打开 PowerShell\n\n",
+      "  2. 你始终使用管理员模式打开 PowerShell, 从不使用用户权限打开 PowerShell\n\n",
       "<@Blue>完整安装命令: <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Cyan>\n\n",
       "---------------------------------------------------------------------\n",
       "<@Cyan>✨✨✨PSCompletions(<@Magenta>psc<@Cyan>) --- 初始化成功！✨✨✨\n",
       "<@Yellow>以下内容仅首次初始化显示, 你也可以通过运行 <@Magenta>psc<@Yellow> 来看到这些内容<@Cyan>\n",
-      "当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
-      "模块版本日志: <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/log.json<@Cyan>\n",
-      "\n",
-      "本模块命令简单, 你只需要输入 <@Magenta>psc<@Cyan> 并尝试按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 你会快速了解所有命令。\n",
-      "使用 <@Magenta>psc list --remote<@Cyan> 获取所有可添加的补全\n",
-      "使用 <@Magenta>psc add <completion><@Cyan> 去添加第一个补全吧！\n",
-      "\n",
-      "关于补全项后面的特殊符号:\n",
-      "- 😄🤔😎 : 如果出现多个, 表示符合多个条件, 可以选择其中一个的效果\n",
-      "\n",
-      "   - 😄 : 表示选用当前选中的补全后, 可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全(普通补全或选项类补全)\n",
-      "        - 可通过 <@Magenta>psc menu symbol SpaceTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 🤔 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全(如 --verbose)\n",
-      "        - 可通过 <@Magenta>psc menu symbol OptionTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 😎 : 表示选用当前选中的选项类补全后, 你可以按下 <@Magenta>空格<@Cyan>, 再输入一个字符串, 然后按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取剩余选项类补全\n",
-      "        - 如果字符串有空格, 请使用 \"\" 或 '' 包裹, 如 \"test content\"\n",
-      "        - 如果同时还有 😄, 表示有几个预设的字符串可以补全, 你可以不输入字符串, 直接按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键继续获取补全\n",
-      "        - 可通过 <@Magenta>psc menu symbol WriteSpaceTab <symbol><@Cyan> 自定义此符号\n",
-      "   - 如果存在通用选项类补全, 也可以触发通用选项的补全\n",
-      "   - 所有补全都可以在输入部分后按下 <@Magenta>Tab<@Cyan> 键触发补全\n",
-      "   - 如果你不需要也不想看到这些符号, 可以将它们替换成空字符串。e.g. <@Magenta>psc menu symbol SpaceTab \"\"<@Cyan>\n",
-      "\n",
-      "- 使用 PowerShell 语言自带的补全菜单时, 如果 <@Magenta>...<@Cyan> 是最后一个补全, 则表示可显示区域过小, 无法显示所有候选项\n",
-      "- 使用模块提供的补全菜单时, 如果补全提示信息末尾出现 <@Magenta>...<@Cyan>, 则表示当前显示区域宽度不够, 提示信息显示不完整\n",
-      "\n",
-      "关于补全提示信息:\n",
-      " - 补全提示信息只是辅助, 你也可以使用 <@Magenta>psc menu config menu_show_tip 0<@Cyan> 来禁用补全提示信息的显示\n",
-      " - 补全提示信息一般由三部分组成: <@Magenta>用法<@Cyan> + <@Magenta>描述<@Cyan> + <@Magenta>举例<@Cyan>\n",
-      "-----------------示例--------------------\n\n",
-      "U: install|add [-g|-u] [options] <app> \n",
-      "这里是命令的描述说明\n",
-      "在 U: 和 E: 之间的内容都是命令描述\n",
-      "E: install xxx\n",
-      "   add -g xxx\n\n",
-      "----------------------------------------\n",
-      "- 示例解析:\n",
-      "  1. 用法: 以 <@Magenta>U: <@Cyan>开头(Usage)\n",
-      "     - 命令名称: <@Magenta>install<@Cyan>\n",
-      "     - 命令别名: <@Magenta>add<@Cyan>\n",
-      "     - 必填参数: <@Magenta><app><@Cyan>\n",
-      "       - <> 里的值是对必填参数的简要概括\n",
-      "     - 可选参数: <@Magenta>-g<@Cyan> <@Magenta>-u<@Cyan>\n",
-      "       - [options] 表示泛指一些选项\n",
-      "  2. 描述: 在 U: 和 E: 中间的内容就是命令描述\n",
-      "  3. 举例: 以 <@Magenta>E: <@Cyan> 开头(Example), 及其之后的内容\n",
-      "     - 示例的起始命令通常是当前补全命令附近, 不会从头开始列出\n",
-      "\n",
-      "关于模块提供的补全菜单:\n",
-      "- 模块提供的补全菜单只能在 Windows 系统下使用 PowerShell(pwsh) 运行, 其他环境只能使用 PowerShell 自带的补全菜单\n",
-      "- 模块提供的补全菜单中的按键\n",
-      "   1. 应用选中的补全项: <@Magenta>Enter<@Cyan>(回车键)\n",
-      "   2. 删除过滤字符: <@Magenta>Backspace<@Cyan>(退格键)\n",
-      "   3. 退出补全菜单: <@Magenta>ESC<@Cyan>/<@Magenta>Ctrl + c<@Cyan>\n",
-      "      - 当过滤区域没有字符时，也可以按下 <@Magenta>Backspace<@Cyan>(退格键) 退出补全菜单\n",
-      "   4. 选择补全项: \n",
-      "     ┌───────────────┬───────────────┐\n",
-      "     │   选择上一项  │   选择下一项  │\n",
-      "     │       <@Magenta>Up<@Cyan>      │     <@Magenta>Down<@Cyan>      │\n",
-      "     |      <@Magenta>Left<@Cyan>     │     <@Magenta>Right<@Cyan>     │\n",
-      "     │  <@Magenta>Shift + Tab<@Cyan>  │      <@Magenta>Tab<@Cyan>      │\n",
-      "     │ <@Magenta>Shift + Space<@Cyan> │     <@Magenta>Space<@Cyan>     │\n",
-      "     │   <@Magenta>Ctrl + u<@Cyan>    │   <@Magenta>Ctrl + d<@Cyan>    │\n",
-      "     │   <@Magenta>Ctrl + p<@Cyan>    │   <@Magenta>Ctrl + n<@Cyan>    │\n",
-      "     └───────────────┴───────────────┘\n",
-      "- 补全菜单的所有配置, 你可以使用 <@Magenta>psc menu<@Cyan> 触发补全, 通过命令提示信息来了解\n",
-      "\n",
-      "关于模块的其他信息:\n",
-      "PSCompletions 模块只会占用两个全局命名(<@Yellow>你不能修改它们<@Cyan>)\n",
-      "  <@Magenta>$PSCompletions<@Cyan> => 变量名, 用于存储模块相关的所有信息\n",
-      "  <@Magenta>PSCompletions<@Cyan>  => 函数名, 模块导出的核心函数(<@Magenta>psc<@Cyan> 其实就是它的别名)\n",
-      "\n",
-      "如需了解更多信息, 请访问项目:\n",
-      "  Github: <@Blue>https://github.com/abgox/PSCompletions\n<@Cyan>",
-      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions\n<@Cyan>",
-      "如果有使用问题, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )\n",
-      "如果 PSCompletions 对你有所帮助, 请给这个项目点个 <@Yellow>Star<@>"
+      "{{ $info.desc }}"
     ],
     "err": {
       "network": [
@@ -1377,27 +1250,9 @@
         "   }",
         "}",
         "}}\n",
-        "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新!"
+        "<@Cyan>按下 <@Magenta>Enter(回车键)<@Cyan> 进行更新，<@Magenta>其他任意键<@Cyan>取消更新!"
       ],
-      "updating": "<@Cyan>成功运行命令: <@Magenta>Update-Module PSCompletions \n<@Cyan>PSCompletions 模块正在更新...",
-      "update_done": "<@Green>PSCompletions 模块更新完成, 请重启 PowerShell 并重新引入模块",
-      "update_err": [
-        "<@Red>PSCompletions 模块更新失败, 请检查原因\n",
-        "<@Yellow>可能的失败原因:\n",
-        "1. 网络问题\n",
-        "2. 如果你使用了 scoop 包管理器安装 PSCompletions, 你也应该使用 scoop 更新它(<@Magenta>scoop update PSCompletions<@Yellow>)\n",
-        "3. 权限问题, 在 4.0.0+ 版本中, 你必须以用户权限(<@Magenta>-Scope CurrentUser<@Yellow>)安装\n",
-        "   - 在 Windows PowerShell(powershell) 中将模块从 v3.x.x 升级到 v4.x.x 的权限问题\n",
-        "       - 如果你正在使用 Windows PowerShell(powershell), 且正在升级模块, 此时, 你应该先删除电脑中所有的 PSCompletions 模块\n",
-        "       - 然后使用 <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> 来安装最新版本的 PSCompletions 模块\n",
-        "       - <@Magenta>-Scope CurrentUser<@Yellow> 必须指定, <@Red>不能使用 -Scope AllUser<@Yellow>\n",
-        "   - 在 PowerShell(pwsh) 下, 之前使用 <@Magenta>Install-Module PSCompletions -Scope AllUser<@Yellow> 安装了模块, 导致模块目录权限有问题\n",
-        "       - 你应该删除这个模块(或者将它移动到其他地方, 以作备份)\n",
-        "       - 然后使用 <@Magenta>Install-Module PSCompletions -Scope CurrentUser<@Yellow> 来安装最新版本的 PSCompletions 模块\n",
-        "       - <@Magenta>-Scope CurrentUser<@Yellow> 必须指定, <@Red>不能使用 -Scope AllUser<@Yellow>\n",
-        "       - 你可以看情况处理之前备份的模块目录\n",
-        "4. 其他原因, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )\n"
-      ]
+      "updating": "<@Cyan>成功运行命令: <@Magenta>Update-Module PSCompletions \n<@Cyan>PSCompletions 模块正在更新..."
     },
     "update_info": [
       "<@Cyan>PSCompletions 远程仓库更新: \n",
